refactor(domain,shared): move enums to shared project and update references
- Moved BookingStatusEnum and UserRoleEnum from Domain to Shared project for better reusability
- Renamed BookingStatus.cs to BookingStatusEnum.cs and updated namespace to AirlineBookingSystem.Shared.Enums
- Created UserRoleEnum in Shared.Enums and removed RoleEnum from Domain.Enums
- Updated entity references in Domain to use enums from Shared
- Added project reference to AirlineBookingSystem.Shared in Domain csproj

--- a/AirlineBookingSystem.Domain/AirlineBookingSystem.Domain.csproj
+++ b/AirlineBookingSystem.Domain/AirlineBookingSystem.Domain.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\AirlineBookingSystem.Shared\AirlineBookingSystem.Shared.csproj" />
+    </ItemGroup>
+
 </Project>
