feat(infrastructure): add Infrastructure layer with dependency injection setup
- Added new Infrastructure project reference for Microsoft.Extensions.Configuration.Abstractions
- Implemented AddInfrastructure extension method for service registration
- Integrated Infrastructure layer into API startup configuration
- Prepared structure for future infrastructure service registrations

--- a/AirlineBookingSystem.Infrastructure/AirlineBookingSystem.Infrastructure.csproj
+++ b/AirlineBookingSystem.Infrastructure/AirlineBookingSystem.Infrastructure.csproj
@@ -12,4 +12,10 @@
       <ProjectReference Include="..\AirlineBookingSystem.Shared\AirlineBookingSystem.Shared.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="Microsoft.Extensions.Configuration.Abstractions">
+        <HintPath>..\..\..\.nuget\packages\microsoft.extensions.configuration.abstractions\9.0.5\lib\net9.0\Microsoft.Extensions.Configuration.Abstractions.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
