--- a/AirlineBookingSystem.Application/AirlineBookingSystem.Application.csproj
+++ b/AirlineBookingSystem.Application/AirlineBookingSystem.Application.csproj
@@ -18,4 +18,8 @@
       <PackageReference Include="MediatR" Version="12.5.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="CQRS\Countries\Queries\" />
+    </ItemGroup>
+
 </Project>
