--- a/AirlineBookingSystem.Infrastructure/AirlineBookingSystem.Infrastructure.csproj
+++ b/AirlineBookingSystem.Infrastructure/AirlineBookingSystem.Infrastructure.csproj
@@ -18,4 +18,8 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.5" />
+    </ItemGroup>
+
 </Project>
