feat(shared): implement Result pattern for standardized API responses
- Introduce generic `Result<T>` and non-generic `Result` classes to encapsulate the outcomes of operations, including success values or error details.
- Add a `ResultStatusCode` enum to provide a clear, typed representation of common HTTP status codes.
- Create factory methods on the `Result` classes for easily generating common success and failure states (e.g., `Success`, `NotFound`, `ValidationError`).
- Implement `ToActionResult` extension methods for `ControllerBase` to seamlessly convert `Result` objects into appropriate `IActionResult` responses.
- Update the shared project dependencies to include references to ASP.NET Core MVC libraries.

--- a/dotnet-backend/AirlineBookingSystem.Shared/AirlineBookingSystem.Shared.csproj
+++ b/dotnet-backend/AirlineBookingSystem.Shared/AirlineBookingSystem.Shared.csproj
@@ -6,4 +6,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Reference Include="Microsoft.AspNetCore.Mvc.Abstractions">
+        <HintPath>..\..\..\..\.nuget\packages\microsoft.aspnetcore.app.ref\9.0.4\ref\net9.0\Microsoft.AspNetCore.Mvc.Abstractions.dll</HintPath>
+      </Reference>
+      <Reference Include="Microsoft.AspNetCore.Mvc.Core">
+        <HintPath>..\..\..\..\.nuget\packages\microsoft.aspnetcore.app.ref\9.0.4\ref\net9.0\Microsoft.AspNetCore.Mvc.Core.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
