--- a/dotnet-backend/AirlineBookingSystem.Shared/AirlineBookingSystem.Shared.csproj
+++ b/dotnet-backend/AirlineBookingSystem.Shared/AirlineBookingSystem.Shared.csproj
@@ -17,6 +17,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.3.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.7" />
     </ItemGroup>
 
 </Project>
