--- a/dotnet-backend/AirlineBookingSystem.IntegrationTests/AirlineBookingSystem.IntegrationTests.csproj
+++ b/dotnet-backend/AirlineBookingSystem.IntegrationTests/AirlineBookingSystem.IntegrationTests.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="coverlet.collector" Version="6.0.2" />
         <PackageReference Include="DotNet.Testcontainers" Version="1.6.0" />
         <PackageReference Include="FluentAssertions" Version="8.3.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.7" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
         <PackageReference Include="xunit" Version="2.9.3" />
         <PackageReference Include="xunit.runner.visualstudio" Version="3.1.1">
