--- a/dotnet-backend/AirlineBookingSystem.Shared/AirlineBookingSystem.Shared.csproj
+++ b/dotnet-backend/AirlineBookingSystem.Shared/AirlineBookingSystem.Shared.csproj
@@ -16,6 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="FluentValidation" Version="12.0.0" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.3.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.7" />
     </ItemGroup>
