feat(refactor): update unit tests for CQRS and code style

--- a/dotnet-backend/AirlineBookingSystem.UnitTests/AirlineBookingSystem.UnitTests.csproj
+++ b/dotnet-backend/AirlineBookingSystem.UnitTests/AirlineBookingSystem.UnitTests.csproj
@@ -31,7 +31,7 @@
 
     <ItemGroup>
       <Folder Include="Features\" />
-      <Folder Include="Features\Terminals\Queries\SearchTerminals\" />
+      <Folder Include="Features\Terminals\Queries\Search\" />
     </ItemGroup>
 
 </Project>
