--- a/dotnet-backend/AirlineBookingSystem.API/appsettings.json
+++ b/dotnet-backend/AirlineBookingSystem.API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Issuer": "https://localhost:5001",
+    "Audience": "https://localhost:5001",
+    "Key": "super-secret-key-that-is-long-enough-to-be-secure-and-is-not-hardcoded-in-a-real-app"
+  }
 }
