--- a/dotnet-backend/AirlineBookingSystem.API/AirlineBookingSystem.API.csproj
+++ b/dotnet-backend/AirlineBookingSystem.API/AirlineBookingSystem.API.csproj
@@ -24,6 +24,7 @@
       <ProjectReference Include="..\AirlineBookingSystem.Persistence\AirlineBookingSystem.Persistence.csproj" />
       <ProjectReference Include="..\AirlineBookingSystem.Shared\AirlineBookingSystem.Shared.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.0" />
   </ItemGroup>
 
 </Project>
