--- a/dotnet-backend/AirlineBookingSystem.API/appsettings.json
+++ b/dotnet-backend/AirlineBookingSystem.API/appsettings.json
@@ -10,5 +10,8 @@
     "Issuer": "https://localhost:5001",
     "Audience": "https://localhost:5001",
     "Key": "super-secret-key-that-is-long-enough-to-be-secure-and-is-not-hardcoded-in-a-real-app"
+  },
+  "Redis": {
+    "ConnectionString": "localhost:6379"
   }
 }
