feat(dotnet-api): Add HttpClient and PaymentController for Stripe integration

--- a/dotnet-backend/AirlineBookingSystem.API/appsettings.Development.json
+++ b/dotnet-backend/AirlineBookingSystem.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "GoPaymentService": {
+    "Url": "http://localhost:8080"
   }
 }
