feat(api): create comprehensive .env.example file
- Analyzed the codebase to identify all environment variables.
- Created a well-documented .env.example file with explanations for each variable.

--- a/dotnet-backend/AirlineBookingSystem.API/.env.example
+++ b/dotnet-backend/AirlineBookingSystem.API/.env.example
@@ -1,1 +1,34 @@
-CONNECTION_STRING=Host=YourHost;Port=YourPort;Database=YourDb;Username=YourUser;Password=YourPassword
+# This file contains environment variables for the Airline Booking System.
+# Copy this file to .env and replace the values with your own.
+
+# -- PostgreSQL Database --
+# These variables are used by the postgres-db service in docker-compose.yml
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=123
+POSTGRES_DB=flightDB
+
+# -- .NET API --
+# This is the connection string for the .NET API to connect to the PostgreSQL database.
+# It's used in docker-compose.yml for the dotnet-api service.
+ConnectionStrings__DefaultConnection=Host=postgres-db;Port=5432;Database=flightDB;Username=postgres;Password=123
+
+# This sets the URLs for the ASP.NET Core application.
+# It's used in docker-compose.yml for the dotnet-api service.
+ASPNETCORE_URLS=http://+:8080
+
+# -- Redis Cache --
+# This is the connection string for the Redis cache.
+# It's used in docker-compose.yml for the dotnet-api service and in appsettings.json.
+Redis__ConnectionString=redis-cache:6379
+
+# -- Go Booking Service --
+# This is the connection string for the Go booking service to connect to the PostgreSQL database.
+# It's used in docker-compose.yml for the go-booking-service service.
+DATABASE_URL=postgres://postgres:123@postgres-db:5432/bookingdb?sslmode=disable
+
+# -- JWT Authentication --
+# These variables are used for JWT authentication and are defined in appsettings.json.
+# You can override them here.
+Jwt__Issuer=https://localhost:5001
+Jwt__Audience=https://localhost:5001
+Jwt__Key=super-secret-key-that-is-long-enough-to-be-secure-and-is-not-hardcoded-in-a-real-app
